# ga-nlcd

./: LICENSE  README.md  environment.yml  setup.cfg
docker/: Dockerfile  Dockerfile-dev  Dockerfile-script-runner  build  cibuild  console  docs-server  format  notebook  run-script  stac  test
docs/: conf.py  index.rst
src/stactools/ga_nlcd/: constants.py
tests/: test_module.py
